--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">4color</string>
+    <string name="_4_color">4 Color</string>
+    <string name="start_game">Start Game</string>
+    <string name="how_to_play">How to Play</string>
 </resources>
