Perfected ui and created gradient for all activity scopes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="_4_color">4 Color</string>
     <string name="start_game">Start Game</string>
     <string name="how_to_play">How to Play</string>
+    <string name="color_red">Red color</string>
+    <string name="color_green">Green color</string>
+    <string name="color_blue">Blue color</string>
+    <string name="color_yellow">Yellow color</string>
+    <string name="undo">Undo</string>
 </resources>
